--- a/front/index.html
+++ b/front/index.html
@@ -7,11 +7,21 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="./src/styles/layout.css">
     <link rel="stylesheet" href="./src/styles/bootstrap/css/bootstrap.min.css">
+    <!-- MDB -->
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css"
+    rel="stylesheet"
+    />
     <title>ALLF</title>
   </head>
   <body>
     <div id="root"></div>
     <script src="./src/styles/bootstrap/js/bootstrap.min.js"></script>
+    <!-- MDB -->
+    <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"
+    ></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
