--- a/front/index.html
+++ b/front/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/alff.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="./src/styles/layout.css">
+    <!-- <link rel="stylesheet" href="./src/styles/layout.css"> -->
     <link rel="stylesheet" href="./src/styles/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./src/styles/style_global.css">
     <!-- MDB -->
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css"
